--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -5,12 +5,15 @@ body
     margin: 0 -12px 20px -12px
 
   .toggle-children-wrapper
-    height: 79px
-    display: inline-block
+    height: 95px
+    display: flex
+    align-items: center
+    padding-top: 5px !important
 
     .toggle-children
       height: 17px !important
       width: 17px !important
       background-image: url('assets/images/expand-arrow.png') !important
-      top: calc(50% - 9px) !important
 
+  .node-content-wrapper
+    padding: 5px 8px !important
